
-------------------------------------------------------------------------------

Tue Oct 26 10:37:53 PDT 1999
(Raster)

be even more paranoid............ in arrangerects

-------------------------------------------------------------------------------

Tue Oct 26 13:54:25 PDT 1999
(Raster)

flim

-------------------------------------------------------------------------------

Tue Oct 26 14:04:00 PDT 1999
(Raster)

again.......

-------------------------------------------------------------------------------

Tue Oct 26 15:22:18 PDT 1999
(KainX)

Fixed another IPC syncing problem, this time with textclasses.

-------------------------------------------------------------------------------

Wed Oct 27 15:02:57 EST 1999
(Christian)

New backgrounds for the dialogs, menus and the documentation.
I grew bored with the old ones. Opinions welcome :)


-------------------------------------------------------------------------------

Wed Oct 27 12:36:22 PDT 1999
(Raster)

some text so you know audio wasnt compiled in...

-------------------------------------------------------------------------------

Wed Oct 27 13:43:23 PDT 1999
(Mandrake)

hmm.  lets see if this fixes the coredump when trying to iconify a menu

-------------------------------------------------------------------------------

Wed Oct 27 16:11:27 PDT 1999
(Raster)

fix translucent move for 24bpp packed.. ugly.. ergh.. code is slow... but works

-------------------------------------------------------------------------------

Wed Oct 27 23:03:16 PDT 1999
(Mandrake)

fixes for Tru64 unix.  I may end up wanting to do an 0.16.2 release just for
them (regular folks won't have to upgrade)

-------------------------------------------------------------------------------

Thu Oct 28 12:13:32 PDT 1999
(Mandrake)

I can't think of why this would be segfaulting or how this code could have
gotten called if there were no border, but I think this must be the segfault
I received in email. *shrug*
